// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 10px 16px;
  font-size: 16px;
  font-weight: bold;
  background-color: #FFFFFF;
  border: solid 1px #93a3ad;
  border-radius: 4px;
  cursor: pointer;
}

.c1:focus {
  outline: 0;
}

.c1 ~ ul {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #03a9f4;
  border-top: none;
}

.c2 {
  font-size: 1.5em;
  pointer-events: none;
}

<div
  className="c0"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c1"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c2"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
.c1 {
  display: block;
  margin-bottom: 5px;
  font-size: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 1.5;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 10px 16px;
  font-size: 16px;
  font-weight: bold;
  background-color: #FFFFFF;
  border: solid 1px #93a3ad;
  border-radius: 4px;
  cursor: pointer;
}

.c2:focus {
  outline: 0;
}

.c2 ~ ul {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #03a9f4;
  border-top: none;
}

.c3 {
  font-size: 1.5em;
  pointer-events: none;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="dropdown"
  >
     
    Text label
     
  </label>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
.c3 {
  color: #f4365b;
  font-size: 12px;
  margin: 5px 0;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 10px 16px;
  font-size: 16px;
  font-weight: bold;
  background-color: #FFFFFF;
  border: solid 1px #93a3ad;
  border-radius: 4px;
  cursor: pointer;
}

.c1:focus {
  outline: 0;
}

.c1 ~ ul {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #03a9f4;
  border-top: none;
}

.c2 {
  font-size: 1.5em;
  pointer-events: none;
}

<div
  className="c0"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c1"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c2"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  <div
<<<<<<< HEAD
    className="c3"
=======
    className="ErrorMessage-sc-19jcdrm-0 Dropdown__DropdownErrorMessage-xoew8d-3 bTkDzo"
>>>>>>> origin/master
  >
    Error message
  </div>
</div>
`;

exports[`Input component  with items should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 10px 16px;
  font-size: 16px;
  font-weight: bold;
  background-color: #FFFFFF;
  border: solid 1px #93a3ad;
  border-radius: 4px;
  cursor: pointer;
}

.c1:focus {
  outline: 0;
}

.c1 ~ ul {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #03a9f4;
  border-top: none;
}

.c2 {
  font-size: 1.5em;
  pointer-events: none;
}

<div
  className="c0"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c1"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c2"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;
